# atzc

./: .gitignore  CMakeLists.txt  README.md
docs/: protocol.md
engine/native/AtCtl/: AtCtl.c  kernel32.def  user32.def
engine/native/AtLaunch/: AtLaunch.c  kernel32.def
engine/native/AtNsShim/: AtNsShim.c  kernel32.def
engine/native/AtProbe/: AtProbe.c  imm32.def  kernel32.def  user32.def
engine/native/AtTipLoad/: AtTipLoad.c  advapi32.def  at_runtime.h  candidates.c  ce_probe.c  crtshim.c  guids.c  imm32.def  kernel32.def  msctf.def  ntdll.def  ole32.def  textstore.c  textstore.h  user32.def
engine/native/Atok31De/: Atok31De.c  Atok31De.def  Atok31De.link.def
engine/native/MsctfShim/: MsctfShim.c  crtshim.c  guids.c  msctf.def
engine/native/ProbeOM/: ProbeOM.c  kernel32.def
engine/scripts/: at-provision.sh  at-tip-clsid.reg  at-wine.sh  at.sh  build-at-ctl.sh  build-at-de.sh  build-at-launch.sh  build-at-nsshim.sh  build-at-probe.sh  build-at-tipload.sh  build-msctf-shim.sh  build-probeom.sh  fetch-wine.sh  wine-headless.sh  wine-pin.sh
fcitx5/: CMakeLists.txt  atzc-addon.conf  atzc-im.conf  engine.cpp  engine.h
include/atzc/: client.h  converter.h  engine.h  harness_engine.h  harness_process.h  local_converter.h  proto.h  session.h  session_engine.h  windows_ime_engine.h
packaging/: atzcd.service
src/: client.cpp  frontend_posix.cpp  frontend_windows.cpp  harness_engine.cpp  local_converter.cpp  posix_harness_process.cpp  session.cpp  session_engine.cpp  windows_ime_engine.cpp
src/atzcd/: engine.h  harness_engine.cpp  harness_engine.h  main.cpp  session.cpp  session.h
src/cli/: main.cpp
tests/: harness_candx_test.cpp  session_engine_test.cpp
